--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Employee Tracker</title>
+    <title>Bus Scheduler</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -15,7 +15,17 @@
         rel="stylesheet">
 
     <!-- Firebase References -->
+    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script>
+
+    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+    <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script>
+
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-database.js"></script>
 
     <!-- Moment.js Reference -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
@@ -45,6 +55,7 @@
                                 </tr>
                             </thead>
                             <tbody>
+
                             </tbody>
                         </table>
                     </div>
@@ -60,20 +71,21 @@
                         <form>
                             <div class="form-group">
                                 <label for="employee-name-input">Bus Name</label>
-                                <input class="form-control" id="name-input" placeholder="ABQ Ride" type="text">
+                                <input class="form-control" id="name-input" placeholder="ABQ Ride" type="text" required>
                             </div>
                             <div class="form-group">
                                 <label for="destination-input">Destination</label>
-                                <input class="form-control" id="destination-input" placeholder="Stop #10594"
-                                    type="text">
+                                <input class="form-control" id="destination-input" placeholder="Stop #10594" type="text"
+                                    required>
                             </div>
                             <div class="form-group">
                                 <label for="time-input">First Bus Time (HH:mm - Military Time)</label>
-                                <input class="form-control" id="time-input" placeholder="8:00 am" type="text">
+                                <input class="form-control" id="time-input" placeholder="8:00 am" type="time" required>
                             </div>
                             <div class="form-group">
                                 <label for="frequency-input">Frequency (min)</label>
-                                <input class="form-control" id="frequency-input" placeholder="60" type="text">
+                                <input class="form-control" id="frequency-input" placeholder="60" type="number"
+                                    required>
                             </div>
                             <button class="btn btn-primary float-right" id="add-bus-btn">Submit</button>
                         </form>
